# cal-jambonz-rust

./: Cargo.toml  README.md
src/: builder.rs  lib.rs  websocket.rs
src/assets/: google_tts_languages.json  initial-request.json  outbound-child-event.json  subsequent-dial-request.json  subsequent-request.json
src/payload/: builder.rs  mod.rs  rest.rs  ws.rs
src/shared/: shared.rs
src/verbs/: amd.rs  auth.rs  bargein.rs  conference.rs  config.rs  constants.rs  dequeue.rs  dial.rs  dialogflow.rs  dtmf.rs  dub.rs  enqueue.rs  gather.rs  hangup.rs  leave.rs  lex.rs  listen.rs  message.rs  mod.rs  pause.rs  play.rs  play_say.rs  rasa.rs  recognizer.rs  redirect.rs  say.rs  sipdecline.rs  siprec.rs  siprefer.rs  synthesizer.rs  tag.rs  target.rs  transcribe.rs  verb.rs
src/verbs/recoginzers/: amazon.rs  azure.rs  deepgram.rs  google.rs  ibm.rs  microsoft.rs  mod.rs  nuance.rs  nvidia.rs  soniox.rs  vad.rs
src/verbs/vendors/: amazon.rs  cartesia.rs  deepgram.rs  elevenlabs.rs  google.rs  ibm.rs  microsoft.rs  mod.rs  nuance.rs  nvidia.rs  openai.rs  playht.rs  rimelabs.rs  soniox.rs  verbio.rs  whisper.rs
