[package]
name = "cal-jambonz"
version = "0.1.42"
edition = "2024"
description = "Jambonz Verbs"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
ip-in-subnet = "0.1"
serde_json = "1.0.140"
log = "0.4.27"
strum = { version = "0.26.3", features = ["derive"] }
